# gaunlet

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  Core.h  pch.h  utils.h
src/application/: Application.h
src/assets/shaders/2d/: circle-color-texture-2d.glsl  circle-vertex-position-2d.glsl  polygon-color-texture-2d.glsl  polygon-fragment-shader.glsl  polygon-vertex-position-2d.glsl  polygon-vertex-shader.glsl
src/buffer/: BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/camera/: OrthographicCamera.cpp  OrthographicCamera.h
src/core/: Core.h  Pointers.h  utils.h
src/core/application/: Application.cpp  Application.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/core/debug/: Instrumentation.h
src/core/event/: Event.h  EventBus.cpp  EventBus.h
src/core/event/events/: CursorEvent.h  KeyEvent.h  MouseEvent.h  ScrollEvent.h  WindowEvent.h
src/core/imgui/: ImGuiRenderApi.cpp  ImGuiRenderApi.h  ViewportLayout.cpp  ViewportLayout.h
src/core/input/: Event.h  EventBus.cpp  EventBus.h  Input.h
src/core/input/events/: CursorEvent.h  KeyEvent.h  KeyRepeatEvent.h  MouseEvent.h  ScrollEvent.h  WindowEvent.h
src/core/render/: RenderApi.cpp  RenderApi.h  RenderCommand.cpp  RenderCommand.h
src/core/render/opengl/: OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  opengl_utils.h
src/core/run-loop/: RunLoop.cpp  RunLoop.h  TimeStep.h
src/core/window/: Input.h  KeyCodes.h  MouseButtonCodes.h  Window.cpp  Window.h
src/gaunlet/: pch.h
src/gaunlet/core/: Pointers.h  utils.h
src/gaunlet/core/application/: Application.cpp  Application.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  TimeStep.h
src/gaunlet/core/debug/: Instrumentation.h
src/gaunlet/core/event/: Event.h  EventBus.cpp  EventBus.h
src/gaunlet/core/imgui/: ImGuiRenderApi.cpp  ImGuiRenderApi.h
src/gaunlet/core/render/: RenderApi.cpp  RenderApi.h  RenderCommand.cpp  RenderCommand.h
src/gaunlet/core/run-loop/: RunLoop.cpp  RunLoop.h
src/gaunlet/core/window/: CoordinatesUtils.h  Input.h  KeyCodes.h  Window.cpp  Window.h
src/gaunlet/editor/: Tags.h
src/gaunlet/editor/docking/: DockingLayout.cpp  DockingLayout.h
src/gaunlet/editor/gizmos/: TranslationGizmo.cpp  TranslationGizmo.h
src/gaunlet/editor/layout-layer/: LayoutLayer.cpp  LayoutLayer.h
src/gaunlet/editor/panel/: Panel.h  RenderPanel.cpp  RenderPanel.h
src/gaunlet/editor/prefab/: ToolsManagerPanel.h  WorkspacePropertiesPanel.h
src/gaunlet/editor/render-pipeline/: RenderPipeline.h  RenderPipelineExtension.h
src/gaunlet/editor/tooling/: SelectionTool.h  Tool.h
src/gaunlet/editor/workspace/: FramebufferRenderPipeline.h  Workspace.cpp  Workspace.h
src/gaunlet/graphics/: Vertex.h
src/gaunlet/graphics/forward-renderer/: ForwardRenderer.cpp  ForwardRenderer.h
src/gaunlet/graphics/framebuffer/: ColorAttachmentSpec.h  DepthStencilAttachmentSpec.h  Framebuffer.cpp  Framebuffer.h
src/gaunlet/graphics/index-buffer/: IndexBuffer.cpp  IndexBuffer.h
src/gaunlet/graphics/render-pass/: Batch.h  BatchedRenderPass.h  SimpleRenderPass.h  SimplerRenderPass.cpp
src/gaunlet/graphics/renderer/: Batch.h  BatchedRenderer.h  DirectRenderer.cpp  DirectRenderer.h
src/gaunlet/graphics/shader/: Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  shader_utils.h
src/gaunlet/graphics/texture/: Image.cpp  Image.h  Texture.h  (+6 more)
src/gaunlet/scene/: Scene.cpp  Scene.h
src/graphics/: Graphics.h
src/graphics-engine/: pch.h
src/graphics-engine/core/: Pointers.h  utils.h
src/graphics-engine/graphics/: Vertex.h
src/graphics-engine/scene/: Scene.cpp  Scene.h
src/graphics/buffer/: BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexBuffer.cpp
src/graphics/camera/: OrthographicCamera.cpp  OrthographicCamera.h
src/graphics/framebuffer/: Framebuffer.cpp  Framebuffer.h
src/graphics/index-buffer/: IndexBuffer.cpp  IndexBuffer.h
src/graphics/mesh/: CircleMesh.h  Mesh.h  Vertex.h
src/graphics/renderer/: Renderer.cpp  Renderer.h
src/graphics/scene/: Component.h  Entity.h  Scene.cpp  Scene.h
src/graphics/shader/: Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  shader_utils.h
src/graphics/texture/: Texture.cpp  Texture.h  TextureImage2D.cpp  TextureImage2D.h  TextureLibrary.cpp  TextureLibrary.h
src/graphics/uniform-buffer/: UniformBuffer.cpp  UniformBuffer.h
src/graphics/vertex-array/: VertexArray.cpp  VertexArray.h
src/graphics/vertex-buffer/: BufferLayout.cpp  BufferLayout.h  VertexBuffer.cpp  VertexBuffer.h
src/include/: Core.h  Graphics.h  Layout.h  Scene.h
src/input/: Event.h  EventBus.cpp  EventBus.h  Input.h
src/input/events/: KeyPressEvent.h  KeyReleaseEvent.h  KeyRepeatEvent.h  WindowResizeEvent.h
src/layout/application/: DockedNode.h  LayoutLayer.cpp  LayoutLayer.h
src/layout/docking/: DockingLayout.cpp  DockingLayout.h
src/mesh/: Mesh.cpp  Mesh.h  Vertex.h
src/render/: RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h
src/render/imgui/: ImGuiRenderApi.cpp  ImGuiRenderApi.h
src/render/opengl/: OpenGLRenderAPI.cpp  OpenGLRenderAPI.h
src/run-loop/: RunLoop.cpp  RunLoop.h  run_loop_utils.h
src/scene/: Component.h  Entity.h  Scene.cpp  Scene.h
src/scene/camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/scene/deferred-renderer/: DeferredRenderer.cpp  DeferredRenderer.h
src/scene/entity/: Entity.h  GraphicsComponents.h  LightingComponents.h  PhysicsComponents.h  ScriptComponents.h
src/scene/forward-renderer/: ForwardRenderer.cpp  ForwardRenderer.h
src/scene/layout/: ViewportLayout.cpp  ViewportLayout.h
src/scene/mesh/: PolygonMesh.h  PolygonVertex.h
src/scene/model/: Mesh.h  Model.cpp  Model.h  Sprites.h  Vertex.h
src/scene/physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/scene/renderer/: Renderer.cpp  Renderer.h
src/shader/: Shader.cpp  Shader.h  shader_utils.h
src/window/: Window.cpp  Window.h
(+317 files in other folders)
